--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,5 +33,8 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"svelte-routing": "^2.13.0"
 	}
 }
