--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
 		"@cartamd/plugin-slash": "^4.1.2",
 		"carta-md": "^4.6.7",
 		"katex": "^0.16.11",
+		"plotly.js-dist": "^2.35.2",
 		"svelte-routing": "^2.13.0"
 	}
 }
