Modified so much stuff lmao... got milkdown + markdown editing working :)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,25 @@
 		"@cartamd/plugin-emoji": "^4.2.1",
 		"@cartamd/plugin-math": "^4.2.1",
 		"@cartamd/plugin-slash": "^4.1.2",
+		"@codemirror/basic-setup": "^0.20.0",
+		"@codemirror/commands": "^6.7.1",
+		"@codemirror/lang-javascript": "^6.2.2",
+		"@codemirror/lang-python": "^6.1.6",
+		"@codemirror/language-data": "^6.5.1",
+		"@codemirror/state": "^6.5.0",
+		"@codemirror/view": "^6.35.3",
+		"@milkdown/core": "^7.5.0",
+		"@milkdown/crepe": "^7.5.7",
+		"@milkdown/ctx": "^7.5.0",
+		"@milkdown/kit": "^7.5.5",
+		"@milkdown/plugin-math": "^7.5.0",
+		"@milkdown/preset-commonmark": "^7.5.0",
+		"@milkdown/prose": "^7.5.0",
+		"@milkdown/theme-nord": "^7.5.0",
+		"@milkdown/transformer": "^7.5.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"carta-md": "^4.6.7",
+		"codemirror": "^6.0.1",
 		"katex": "^0.16.11",
 		"plotly.js-dist": "^2.35.2",
 		"svelte-routing": "^2.13.0"
