--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
 		"codemirror": "^6.0.1",
 		"d3": "^7.9.0",
 		"katex": "^0.16.11",
+		"lucide-svelte": "^0.468.0",
 		"plotly.js-dist": "^2.35.2",
 		"svelte-routing": "^2.13.0"
 	}
