--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
 		"@milkdown/prose": "^7.5.0",
 		"@milkdown/theme-nord": "^7.5.0",
 		"@milkdown/transformer": "^7.5.0",
+		"@sveltejs/svelte-scroller": "^2.0.7",
 		"@tailwindcss/typography": "^0.5.15",
 		"atomico": "^1.79.2",
 		"carta-md": "^4.6.7",
@@ -66,6 +67,7 @@
 		"lucide-svelte": "^0.468.0",
 		"plotly.js-dist": "^2.35.2",
 		"svelte-routing": "^2.13.0",
+		"svelte-scroller": "github:sveltejs/kit",
 		"topojson-client": "^3.1.0"
 	}
 }
